[project]
name = "04-ch04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.15.0",
    "ddgs==9.14.4",
    "duckduckgo-search==8.1.1",
    "langchain==1.3.7",
    "langchain-community==0.4.2",
    "langchain-openai==1.3.0",
    "requests==2.34.2",
]
